2004-07-12  Andrey Slusar <anray@users.sourceforge.net>

	* src/toss/ngoper.c: if AutoCreateRenumberCmd not
	    defined, this is silently skipped
	* src/gate/send-fidogate.in: fixed confval warning

2004-07-09  Andrey Slusar <anray@users.sourceforge.net>

	======= Release 5.1.1ds =============================
	------- CVS tag R511 --------------------------------
	* version.h: update to stable 5.1.1ds
	* configure.h.in: update to stable 5.1.1ds

2004-07-05  Andrey Slusar <anray@users.sourceforge.net>

	* doc/README.ru: update
	* doc/FAQ.ru: update
	* src/common/binkley.c: if enable AMIGADOS_4D_OUTBOUND,
	    then using outbound for default zone
	* src/toss/ftnpack.c: if enable AMIGADOS_4D_OUTBOUND,
	    then using outbound for default zone
	* src/toss/ftnroute.c: if enable AMIGADOS_4D_OUTBOUND,
	    then using outbound for default zone
	* src/gate/ftn2rfc.c: fix SingleArticles

2004-06-15  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* version.h: update to 5.1.1ds-rc5
	* packages/freebsd: update
	* src/toss/runinc.c: add -c option, if tmpunpack
	    dirs not exsist, create it
	* src/areafix/areafix.c: fix traping cmd_listall

2004-06-11  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/packet.c: change checking pkt date
	    format

2004-06-08  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* version.h: update to 5.1.1ds-rc4
	* scripts/nodelist/nl-autoupd.in: add detecting
	    DIFFDIR, NLDIR, NLFDIR in fidogate.conf

2004-06-06  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* version.h: update version number to 5.1.1ds-rc3
	* src/gate/send-fidogate.in: add detecting LOGDIR
	    and LOCKDIR in fidogate.conf
	* src/util/confval.c: change sterr to stdout if
	    variable exist
	* src/common/getopt.c: fix args
	* src/common/misc.c: fix and rewrite str_append()

2004-05-26  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* Changes.ru: update
	* doc/FAQ.ru: add Id

2004-05-24  Andrey Slusar <rusfidogate@users.sourceforge.net>
	