@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 1.14 2004/07/09 00:25:55 anray Exp $
+# $Id: mkinstalldirs,v 1.15 2004/07/20 00:05:01 anray Exp $
 
 errstatus=0
 
