@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
 dnl # Copy revision into the `configure' script
-AC_REVISION([$Id: configure.in,v 1.10 2004/07/09 00:25:55 anray Exp $])
+AC_REVISION([$Id: configure.in,v 1.11 2004/07/20 00:05:01 anray Exp $])
 dnl # Minimum Autoconf version required.
 AC_PREREQ(2.53)
 dnl # No comments...
@@ -395,7 +395,7 @@ AC_MSG_ERROR([PLEASE INSTALL INN OR SET PATH TO innconfval DIR; use --with-newsb
     fi
     
     if $newsbindir/innconfval -v 2>&1 </dev/null | egrep 2\.\[3\|4] > /dev/null; then
-      eval `$newsbindir/innconfval -s|grep -v VERSION`
+      eval `$newsbindir/innconfval -s|grep -e PATHNEWS -e PATHBIN`
       NEWSLIBDIR=${PATHNEWS}
     else
       NEWSLIBDIR=$newsbindir
